--- a/ch_01/checking_your_setup.ipynb
+++ b/ch_01/checking_your_setup.ipynb
@@ -10,35 +10,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using Python in /home/stefaniemolin/book_env:\n",
-      "\u001b[42m[ OK ]\u001b[0m Python is version 3.7.3 (default, Dec 20 2019, 18:57:59) \n",
-      "[GCC 8.3.0]\n",
+      "Using Python in D:\\Sysfiles\\Users\\Shailendra\\anaconda3\\envs\\mlenv:\n",
+      "\u001b[42m[ OK ]\u001b[0m Python is version 3.8.11 (default, Aug  6 2021, 09:57:55) [MSC v.1916 64 bit (AMD64)]\n",
       "\n",
-      "\u001b[42m[ OK ]\u001b[0m graphviz\n",
-      "\u001b[42m[ OK ]\u001b[0m imblearn\n",
-      "\u001b[42m[ OK ]\u001b[0m ipympl\n",
-      "\u001b[42m[ OK ]\u001b[0m jupyterlab\n",
-      "\u001b[42m[ OK ]\u001b[0m matplotlib\n",
-      "\u001b[42m[ OK ]\u001b[0m numpy\n",
-      "\u001b[42m[ OK ]\u001b[0m pandas\n",
-      "\u001b[42m[ OK ]\u001b[0m requests\n",
-      "\u001b[42m[ OK ]\u001b[0m sklearn\n",
-      "\u001b[42m[ OK ]\u001b[0m scipy\n",
-      "\u001b[42m[ OK ]\u001b[0m seaborn\n",
-      "\u001b[42m[ OK ]\u001b[0m sqlalchemy\n",
-      "\u001b[42m[ OK ]\u001b[0m statsmodels\n",
-      "\u001b[42m[ OK ]\u001b[0m wheel\n",
-      "\u001b[42m[ OK ]\u001b[0m login_attempt_simulator\n",
-      "\u001b[42m[ OK ]\u001b[0m ml_utils\n",
-      "\u001b[42m[ OK ]\u001b[0m stock_analysis\n",
-      "\u001b[42m[ OK ]\u001b[0m visual_aids\n"
+      "\u001b[41m[FAIL]\u001b[0m graphviz version 0.14.1 is required, but 0.17 installed.\n",
+      "\u001b[41m[FAIL]\u001b[0m imblearn version 0.7.0 is required, but 0.4.3 installed.\n",
+      "\u001b[41m[FAIL]\u001b[0m ipympl version 0.6.2 is required, but 0.7.0 installed.\n",
+      "\u001b[41m[FAIL]\u001b[0m jupyterlab version 3.0.4 is required, but 3.1.7 installed.\n",
+      "\u001b[41m[FAIL]\u001b[0m matplotlib version 3.3.2 is required, but 3.4.2 installed.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Empty module name",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\SHAILE~1\\AppData\\Local\\Temp/ipykernel_1592/3381005240.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mcheck_environment\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrun_checks\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrun_checks\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\Sysfiles\\Users\\Shailendra\\Documents\\Machine Learning\\Hands-On-Data-Analysis-with-Pandas\\ch_01\\check_environment.py\u001b[0m in \u001b[0;36mrun_checks\u001b[1;34m()\u001b[0m\n\u001b[0;32m     46\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mpkg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreq_version\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrequirements\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m             \u001b[0mmod\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimportlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimport_module\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpkg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mreq_version\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m                 \u001b[0mversion\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmod\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Sysfiles\\Users\\Shailendra\\anaconda3\\envs\\mlenv\\lib\\importlib\\__init__.py\u001b[0m in \u001b[0;36mimport_module\u001b[1;34m(name, package)\u001b[0m\n\u001b[0;32m    125\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    126\u001b[0m             \u001b[0mlevel\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 127\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_bootstrap\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_gcd_import\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpackage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    128\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    129\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Sysfiles\\Users\\Shailendra\\anaconda3\\envs\\mlenv\\lib\\importlib\\_bootstrap.py\u001b[0m in \u001b[0;36m_gcd_import\u001b[1;34m(name, package, level)\u001b[0m\n",
+      "\u001b[1;32mD:\\Sysfiles\\Users\\Shailendra\\anaconda3\\envs\\mlenv\\lib\\importlib\\_bootstrap.py\u001b[0m in \u001b[0;36m_sanity_check\u001b[1;34m(name, package, level)\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Empty module name"
      ]
     }
    ],
@@ -71,11 +72,37 @@
     "</div>\n",
     "<hr>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: conda-script.py [-h] [-V] command ...\n",
+      "conda-script.py: error: unrecognized arguments: -r\n"
+     ]
+    }
+   ],
+   "source": [
+    "conda install -r requirements.txt"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
