--- a/ch_01/exercises.ipynb
+++ b/ch_01/exercises.ipynb
@@ -13,14 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
     "random.seed(0)\n",
-    "salaries = [round(random.random()*1000000, -3) for _ in range(100)]"
+    "salaries = [round(random.random()*1000000, -3) for _ in range(100)]\n",
+    "\n",
+    "salaries = sorted(salaries)\n"
    ]
   },
   {
@@ -33,10 +35,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "585690.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mean(data):\n",
+    "    return sum(data)/len(data)\n",
+    "\n",
+    "mean(salaries)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +65,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "589000.0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def median(data):\n",
+    "    index =  int(len(data) // 2)\n",
+    "    if len(data) % 2:\n",
+    "        return data[index]\n",
+    "    else:\n",
+    "        return (data[index-1] + data[index])/2\n",
+    "    \n",
+    "\n",
+    "median(salaries)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +100,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "477000.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "def mode(data):\n",
+    "    c = Counter(data)\n",
+    "    return c.most_common(1)[0][0]\n",
+    "    \n",
+    "mode(salaries)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +133,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70664054444.44444"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sample_variance(data):\n",
+    "    n = len(data)\n",
+    "    mean_s = mean(data)\n",
+    "    deviations = [(a - mean_s)**2 for a in data]\n",
+    "    variance = sum(deviations) / (n - 1)\n",
+    "    return variance\n",
+    "\n",
+    "sample_variance(salaries)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,10 +168,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "264494.6386961369"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def std_dev(data):\n",
+    "    variance = sample_variance(data)\n",
+    "    stdev = math.sqrt(variance)\n",
+    "    return stdev\n",
+    "\n",
+    "std_dev(salaries)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +202,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "995000.0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def range_stat(data):\n",
+    "    return max(data) - min(data)\n",
+    "\n",
+    "range_stat(salaries)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,10 +233,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4515949370761613"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def coef_var(data):\n",
+    "    return std_dev(data) / mean(data)\n",
+    "\n",
+    "coef_var(salaries)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +263,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "417500.0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def inter_quartile(data):\n",
+    "    n = len(data)\n",
+    "    mid = n//2\n",
+    "    lowerQ = median(data[:mid])\n",
+    "    upperQ = median(data[mid:])\n",
+    "    return upperQ-lowerQ\n",
+    "\n",
+    "inter_quartile(salaries)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,14 +297,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3417928776094965"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def quar_coef(data):\n",
+    "    n = len(data)\n",
+    "    mid = n//2\n",
+    "    lowerQ = median(data[:mid])\n",
+    "    upperQ = median(data[mid:])\n",
+    "    return ((upperQ-lowerQ)/(upperQ+lowerQ))\n",
+    "\n",
+    "quar_coef(salaries)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Exercise 7: Scaling data\n",
     "### min-max scaling"
@@ -164,10 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def min_max_scaling(data):\n",
+    "    data2 = []\n",
+    "    n = len(data)\n",
+    "    for i in range(100):\n",
+    "        data2.append( (data[i] - min(data))/range_stat(data) )\n",
+    "    return data2\n",
+    "\n",
+    "normalized = min_max_scaling(salaries)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,10 +357,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def z_scores(data):\n",
+    "    data2 = []\n",
+    "    n = len(data)\n",
+    "    for i in range(100):\n",
+    "        data2.append( (data[i] - mean(data))/std_dev(data) )\n",
+    "    return data2\n",
+    "\n",
+    "standardized = z_scores(salaries)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,10 +381,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.267162928467176"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Covariance formula used here is: Summation((X - mean(X)) * (Y - mean(Y)) / n - 1\n",
+    "def cov(X,Y):\n",
+    "    mean_X = mean(X)\n",
+    "    mean_Y = mean(Y)\n",
+    "    temp1 = [i - mean_X for i in X]\n",
+    "    temp2 = [i - mean_Y for i in Y]\n",
+    "    temp1 = sum([temp1[i] * temp2[i] for i in range(len(X))])\n",
+    "    temp2 = len(X) - 1\n",
+    "    cov = temp1/temp2\n",
+    "    return cov\n",
+    "\n",
+    "cov(normalized,standardized)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,10 +420,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0000000000000004"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def corr(X,Y):\n",
+    "    corr = (cov(X,Y) / (std_dev(X) * std_dev(Y)) )\n",
+    "    return corr\n",
+    "\n",
+    "corr(normalized,standardized)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,7 +468,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
