--- a/ch_02/2-creating_dataframes.ipynb
+++ b/ch_02/2-creating_dataframes.ipynb
@@ -33,28 +33,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0.548814\n",
-       "1    0.715189\n",
-       "2    0.602763\n",
-       "3    0.544883\n",
-       "4    0.423655\n",
+       "0    0.221993\n",
+       "1    0.870732\n",
+       "2    0.206719\n",
+       "3    0.918611\n",
+       "4    0.488411\n",
        "Name: random, dtype: float64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.seed(0) # set a seed for reproducibility\n",
-    "pd.Series(np.random.rand(5), name='random')"
+    "np.random.seed(5)\n",
+    "pd.Series(np.random.rand(5), name = \"random\")"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -101,18 +101,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2.5</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7.5</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>10.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -122,19 +126,22 @@
       "text/plain": [
        "      0\n",
        "0   0.0\n",
-       "1   2.5\n",
-       "2   5.0\n",
-       "3   7.5\n",
-       "4  10.0"
+       "1   2.0\n",
+       "2   4.0\n",
+       "3   6.0\n",
+       "4   8.0\n",
+       "5  10.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.Series(np.linspace(0, 10, num=5)).to_frame()"
+    "pd.Series(np.linspace(0, 10, num=5)).to_frame()\n",
+    "\n",
+    "pd.Series(np.linspace(0,10, num = 6)).to_frame()"
    ]
   },
   {
@@ -148,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +184,7 @@
        "      <th>truth</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>date</th>\n",
+       "      <th>Date</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -185,32 +192,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2019-04-17</th>\n",
-       "      <td>0.548814</td>\n",
+       "      <th>2021-08-30</th>\n",
+       "      <td>0.221993</td>\n",
        "      <td>hot</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-04-18</th>\n",
-       "      <td>0.715189</td>\n",
-       "      <td>warm</td>\n",
+       "      <th>2021-09-04</th>\n",
+       "      <td>0.870732</td>\n",
+       "      <td>cold</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-04-19</th>\n",
-       "      <td>0.602763</td>\n",
+       "      <th>2021-09-09</th>\n",
+       "      <td>0.206719</td>\n",
+       "      <td>warm</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-14</th>\n",
+       "      <td>0.918611</td>\n",
        "      <td>cool</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-04-20</th>\n",
-       "      <td>0.544883</td>\n",
-       "      <td>cold</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-04-21</th>\n",
-       "      <td>0.423655</td>\n",
+       "      <th>2021-09-19</th>\n",
+       "      <td>0.488411</td>\n",
        "      <td>None</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -220,34 +227,35 @@
       ],
       "text/plain": [
        "              random  text  truth\n",
-       "date                             \n",
-       "2019-04-17  0.548814   hot  False\n",
-       "2019-04-18  0.715189  warm   True\n",
-       "2019-04-19  0.602763  cool   True\n",
-       "2019-04-20  0.544883  cold  False\n",
-       "2019-04-21  0.423655  None   True"
+       "Date                             \n",
+       "2021-08-30  0.221993   hot  False\n",
+       "2021-09-04  0.870732  cold   True\n",
+       "2021-09-09  0.206719  warm  False\n",
+       "2021-09-14  0.918611  cool   True\n",
+       "2021-09-19  0.488411  None   True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.seed(0) # set seed so result is reproducible\n",
+    "np.random.seed(5)\n",
     "pd.DataFrame(\n",
     "    {\n",
     "        'random': np.random.rand(5),\n",
-    "        'text': ['hot', 'warm', 'cool', 'cold', None],\n",
+    "        'text': ['hot','cold','warm','cool', None],\n",
     "        'truth': [np.random.choice([True, False]) for _ in range(5)]\n",
-    "    }, \n",
-    "    index=pd.date_range(\n",
-    "        end=dt.date(2019, 4, 21),\n",
-    "        freq='1D',\n",
-    "        periods=5, \n",
-    "        name='date'\n",
+    "    },\n",
+    "    index = pd.date_range(\n",
+    "        end = dt.date(2021, 9, 19),\n",
+    "        freq = '5D',\n",
+    "        periods = 5,\n",
+    "        name = 'Date'\n",
     "    )\n",
-    ")"
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -336,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +353,7 @@
        "[(0, 0, 0), (1, 1, 1), (2, 4, 8), (3, 9, 27), (4, 16, 64)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -385,34 +393,40 @@
        "      <th>n_squared</th>\n",
        "      <th>n_cubed</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>5</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>6</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>7</th>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>8</th>\n",
        "      <td>3</td>\n",
        "      <td>9</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>9</th>\n",
        "      <td>4</td>\n",
        "      <td>16</td>\n",
        "      <td>64</td>\n",
@@ -422,24 +436,30 @@
        "</div>"
       ],
       "text/plain": [
-       "   n  n_squared  n_cubed\n",
-       "0  0          0        0\n",
-       "1  1          1        1\n",
-       "2  2          4        8\n",
-       "3  3          9       27\n",
-       "4  4         16       64"
+       "       n  n_squared  n_cubed\n",
+       "Index                       \n",
+       "5      0          0        0\n",
+       "6      1          1        1\n",
+       "7      2          4        8\n",
+       "8      3          9       27\n",
+       "9      4         16       64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(\n",
+    "a = pd.DataFrame(\n",
     "    list_of_tuples, \n",
-    "    columns=['n', 'n_squared', 'n_cubed']\n",
-    ")"
+    "    columns=['n', 'n_squared', 'n_cubed'],\n",
+    "    index = ([x for x in range(5,10)])\n",
+    "    \n",
+    ")\n",
+    "\n",
+    "a.index.name = \"Index\"\n",
+    "a"
    ]
   },
   {
@@ -556,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -591,14 +611,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r-- 1 stefanie stefanie 3.4M Aug 24 17:39 earthquakes.csv\n"
+      "-rw-r--r-- 1 Shailendra 197609 3.4M May 31 21:24 earthquakes.csv\n"
      ]
     }
    ],
@@ -621,16 +641,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['-rw-r--r-- 1 stefanie stefanie 3.4M Aug 24 17:39 earthquakes.csv']"
+       "['-rw-r--r-- 1 Shailendra 197609 3.4M May 31 21:24 earthquakes.csv']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +1004,7 @@
        "4              94km SW of Kokopo, Papua New Guinea     mww  6.2  1539208835130  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1038,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1032,7 +1052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
