--- a/ch_02/3-making_dataframes_from_api_requests.ipynb
+++ b/ch_02/3-making_dataframes_from_api_requests.ipynb
@@ -97,12 +97,12 @@
     {
      "data": {
       "text/plain": [
-       "{'generated': 1604267813000,\n",
-       " 'url': 'https://earthquake.usgs.gov/fdsnws/event/1/query?format=geojson&starttime=2020-10-01&endtime=2020-10-31',\n",
+       "{'generated': 1632073086000,\n",
+       " 'url': 'https://earthquake.usgs.gov/fdsnws/event/1/query?format=geojson&starttime=2021-08-19&endtime=2021-09-18',\n",
        " 'title': 'USGS Earthquakes',\n",
        " 'status': 200,\n",
-       " 'api': '1.10.3',\n",
-       " 'count': 13706}"
+       " 'api': '1.12.2',\n",
+       " 'count': 13894}"
       ]
      },
      "execution_count": 3,
@@ -157,34 +157,35 @@
      "data": {
       "text/plain": [
        "{'type': 'Feature',\n",
-       " 'properties': {'mag': 1,\n",
-       "  'place': '50 km ENE of Susitna North, Alaska',\n",
-       "  'time': 1604102395919,\n",
-       "  'updated': 1604103325550,\n",
+       " 'properties': {'mag': -0.23,\n",
+       "  'place': '15 km WSW of Dutch Harbor, Alaska',\n",
+       "  'time': 1631922462560,\n",
+       "  'updated': 1631937139320,\n",
        "  'tz': None,\n",
-       "  'url': 'https://earthquake.usgs.gov/earthquakes/eventpage/ak020dz5f85a',\n",
-       "  'detail': 'https://earthquake.usgs.gov/fdsnws/event/1/query?eventid=ak020dz5f85a&format=geojson',\n",
+       "  'url': 'https://earthquake.usgs.gov/earthquakes/eventpage/av91041373',\n",
+       "  'detail': 'https://earthquake.usgs.gov/fdsnws/event/1/query?eventid=av91041373&format=geojson',\n",
        "  'felt': None,\n",
        "  'cdi': None,\n",
        "  'mmi': None,\n",
        "  'alert': None,\n",
        "  'status': 'reviewed',\n",
        "  'tsunami': 0,\n",
-       "  'sig': 15,\n",
-       "  'net': 'ak',\n",
-       "  'code': '020dz5f85a',\n",
-       "  'ids': ',ak020dz5f85a,',\n",
-       "  'sources': ',ak,',\n",
+       "  'sig': 0,\n",
+       "  'net': 'av',\n",
+       "  'code': '91041373',\n",
+       "  'ids': ',av91041373,',\n",
+       "  'sources': ',av,',\n",
        "  'types': ',origin,phase-data,',\n",
-       "  'nst': None,\n",
+       "  'nst': 6,\n",
        "  'dmin': None,\n",
-       "  'rms': 1.36,\n",
-       "  'gap': None,\n",
+       "  'rms': 0.27,\n",
+       "  'gap': 100,\n",
        "  'magType': 'ml',\n",
        "  'type': 'earthquake',\n",
-       "  'title': 'M 1.0 - 50 km ENE of Susitna North, Alaska'},\n",
-       " 'geometry': {'type': 'Point', 'coordinates': [-148.9807, 62.3533, 5]},\n",
-       " 'id': 'ak020dz5f85a'}"
+       "  'title': 'M -0.2 - 15 km WSW of Dutch Harbor, Alaska'},\n",
+       " 'geometry': {'type': 'Point',\n",
+       "  'coordinates': [-166.775666666667, 53.8608333333333, 6.08]},\n",
+       " 'id': 'av91041373'}"
       ]
      },
      "execution_count": 5,
@@ -474,7 +475,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
