--- a/ch_02/1-pandas_data_structures.ipynb
+++ b/ch_02/1-pandas_data_structures.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -27,10 +27,10 @@
        "       ('2018-10-13 00:13:46.220', '42km WNW of Sola, Vanuatu', 'mww', 5.7, 'green', 0),\n",
        "       ('2018-10-12 21:09:49.240', '13km E of Nueva Concepcion, Guatemala', 'mww', 5.7, 'green', 0),\n",
        "       ('2018-10-12 02:52:03.620', '128km SE of Kimbe, Papua New Guinea', 'mww', 5.6, 'green', 1)],\n",
-       "      dtype=[('time', '<U23'), ('place', '<U37'), ('magType', '<U3'), ('mag', '<f8'), ('alert', '<U5'), ('tsunami', '<i8')])"
+       "      dtype=[('time', '<U23'), ('place', '<U37'), ('magType', '<U3'), ('mag', '<f8'), ('alert', '<U5'), ('tsunami', '<i4')])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "(5,)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype([('time', '<U23'), ('place', '<U37'), ('magType', '<U3'), ('mag', '<f8'), ('alert', '<U5'), ('tsunami', '<i8')])"
+       "dtype([('time', '<U23'), ('place', '<U37'), ('magType', '<U3'), ('mag', '<f8'), ('alert', '<U5'), ('tsunami', '<i4')])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,14 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.74 µs ± 177 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "11.4 µs ± 1.71 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        " 'tsunami': array([1, 0, 0, 0, 1])}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,26 +164,48 @@
     "    col: np.array([row[i] for row in data])\n",
     "    for i, col in enumerate(data.dtype.names)\n",
     "}\n",
-    "array_dict"
+    "array_dict\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grabbing the maximum magnitude is now simply a matter of selecting the `mag` key and calling the `max()` method. This is nearly twice as fast as the list comprehension implementation when dealing with just 5 entries, imagine how much worse the first attempt will perform on large data sets:"
+    "Grabbing the maximum magnitude is now simply a matter of selecting the `mag` key and calling the `max()` method. This is nearly twice as fast as the list comprehension implementation when dealing with just 5 entries, imagine how much worse the first attempt will perform on large data sets:\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6.7, 5.2, 5.7, 5.7, 5.6])"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_dict[\"mag\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.22 µs ± 100 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "1.92 µs ± 42.2 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -201,17 +223,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_dict[\"mag\"].argmax()\n",
+    "#Argmax gives the index of the highest value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array(['2018-10-13 11:10:23.560', '262km NW of Ozernovskiy, Russia',\n",
-       "       'mww', '6.7', 'green', '1'], dtype='<U31')"
+       "       'mww', '6.7', 'green', '1'], dtype='<U32')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +292,7 @@
        "Name: place, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -710,17 +753,124 @@
        "4  5.6  green        1  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.DataFrame(array_dict) \n",
-    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>place</th>\n",
+       "      <th>magType</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>alert</th>\n",
+       "      <th>tsunami</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-10-13 11:10:23.560</td>\n",
+       "      <td>262km NW of Ozernovskiy, Russia</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>green</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-10-13 04:34:15.580</td>\n",
+       "      <td>25km E of Bitung, Indonesia</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>green</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-10-13 00:13:46.220</td>\n",
+       "      <td>42km WNW of Sola, Vanuatu</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>green</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-10-12 21:09:49.240</td>\n",
+       "      <td>13km E of Nueva Concepcion, Guatemala</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>green</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-10-12 02:52:03.620</td>\n",
+       "      <td>128km SE of Kimbe, Papua New Guinea</td>\n",
+       "      <td>mww</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>green</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      time                                  place magType  \\\n",
+       "0  2018-10-13 11:10:23.560        262km NW of Ozernovskiy, Russia     mww   \n",
+       "1  2018-10-13 04:34:15.580            25km E of Bitung, Indonesia     mww   \n",
+       "2  2018-10-13 00:13:46.220              42km WNW of Sola, Vanuatu     mww   \n",
+       "3  2018-10-12 21:09:49.240  13km E of Nueva Concepcion, Guatemala     mww   \n",
+       "4  2018-10-12 02:52:03.620    128km SE of Kimbe, Papua New Guinea     mww   \n",
+       "\n",
+       "   mag  alert  tsunami  \n",
+       "0  6.7  green        1  \n",
+       "1  5.2  green        0  \n",
+       "2  5.7  green        0  \n",
+       "3  5.7  green        0  \n",
+       "4  5.6  green        1  "
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# this will also work with the first representation\n",
-    "# df = pd.DataFrame(data)\n",
-    "\n",
+    "df = pd.DataFrame(data)\n",
     "df"
    ]
   },
@@ -1028,7 +1178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1042,7 +1192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
